<?xml version="1.0" encoding="UTF-8"?><resources><string name="module486string0">module486string0</string>
<string name="module486string1">module486string1</string>
<string name="module486string2">module486string2</string>
<string name="module486string3">module486string3</string>
<string name="module486string4">module486string4</string>
<string name="module486string5">module486string5</string>
<string name="module486string6">module486string6</string>
<string name="module486string7">module486string7</string>
<string name="module486string8">module486string8</string>
<string name="module486string9">module486string9</string>
<string name="module486string10">module486string10</string>
<string name="module486string11">module486string11</string>
<string name="module486string12">module486string12</string>
<string name="module486string13">module486string13</string>
<string name="module486string14">module486string14</string>
<string name="module486string15">module486string15</string>
<string name="module486string16">module486string16</string>
<string name="module486string17">module486string17</string>
<string name="module486string18">module486string18</string>
<string name="module486string19">module486string19</string>
<string name="module486string20">module486string20</string>
<string name="module486string21">module486string21</string>
<string name="module486string22">module486string22</string>
<string name="module486string23">module486string23</string>
<string name="module486string24">module486string24</string>
<string name="module486string25">module486string25</string>
<string name="module486string26">module486string26</string>
<string name="module486string27">module486string27</string>
<string name="module486string28">module486string28</string>
<string name="module486string29">module486string29</string>
<string name="module486string30">module486string30</string>
<string name="module486string31">module486string31</string>
<string name="module486string32">module486string32</string>
<string name="module486string33">module486string33</string>
<string name="module486string34">module486string34</string>
<string name="module486string35">module486string35</string>
<string name="module486string36">module486string36</string>
<string name="module486string37">module486string37</string>
<string name="module486string38">module486string38</string>
<string name="module486string39">module486string39</string>
<string name="module486string40">module486string40</string>
<string name="module486string41">module486string41</string>
<string name="module486string42">module486string42</string>
<string name="module486string43">module486string43</string>
<string name="module486string44">module486string44</string>
<string name="module486string45">module486string45</string>
<string name="module486string46">module486string46</string>
<string name="module486string47">module486string47</string>
<string name="module486string48">module486string48</string>
<string name="module486string49">module486string49</string>
<string name="module486string50">module486string50</string>
<string name="module486string51">module486string51</string>
<string name="module486string52">module486string52</string>
<string name="module486string53">module486string53</string>
<string name="module486string54">module486string54</string>
<string name="module486string55">module486string55</string>
<string name="module486string56">module486string56</string>
<string name="module486string57">module486string57</string>
<string name="module486string58">module486string58</string>
<string name="module486string59">module486string59</string>
<string name="module486string60">module486string60</string>
<string name="module486string61">module486string61</string>
<string name="module486string62">module486string62</string>
<string name="module486string63">module486string63</string>
<string name="module486string64">module486string64</string>
<string name="module486string65">module486string65</string>
<string name="module486string66">module486string66</string>
<string name="module486string67">module486string67</string>
</resources>